--- a/styleForGrammaire.css
+++ b/styleForGrammaire.css
@@ -71,16 +71,7 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
 }
 
-/*Main style */
-.quizAllerBlock {
-    background-color: white;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-bottom: 20px;
-    border-radius: 20px;
-}
+
 
 
 
@@ -99,9 +90,9 @@ th {
 }
 
 
-/*Quiz styling aller test*/
+/*Quiz styling in exercises*/
 fieldset {
-    border: 2px solid #333;
+    border: 2px solid #b91a71;
     padding: 15px;
     max-width: 300px;
 }
