--- a/styleForGrammaire.css
+++ b/styleForGrammaire.css
@@ -91,21 +91,20 @@ th {
 
 
 /*Quiz styling in exercises*/
-.avoirInJe, .avoirForIl, .translateIlsOntUnChat, .translateEveryoneHasACat, .allerInVous, .allerForNous, .translateWeGoToCinema, .translateTuVasALecole, .etreForElles, .etreForOn, .translateTuEsCoiffeur, .translateItsIncredible, .faireInVous, .faireForNous, .translateWeMakeCake, .translateAreYouDoingHomework, .regarderInVous, .allerForNous, .fondreForIl 
-{
-    background-color: #d4c3e8;
-}
-
-
-
 fieldset {
-    border: 2px ridge #6b2a61;
+    border: none;/*2px ridge #6b2a61;*/
     padding: 15px;
     max-width: 300px;
+    background-color: #d4c3e8;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    
 }
 
 legend {
     font-weight: bold;
+    float: left;
+    text-decoration: underline;
 }
 
 .radio-label, .checkbox-label {
