--- a/styleForGrammaire.css
+++ b/styleForGrammaire.css
@@ -81,18 +81,18 @@ table {
     width: 50%;
 }
 th, td {
-    border: 2px solid black; /* Border for table cells */
+    border: 2px solid #dcd8e0; /* Border for table cells */
     padding: 10px; /* Space inside the cell */
     text-align: center;
 }
 th {
-    background-color: #f2f2f2; /* Light gray background for headers */
+    background-color:rgb(125, 11, 224); /*  background for headers */
 }
 
 
 /*Quiz styling in exercises*/
 fieldset {
-    border: none;/*2px ridge #6b2a61;*/
+    border: solid #4d0e87;
     padding: 15px;
     max-width: 300px;
     background-color: #d4c3e8;
